--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>LA TV Shows | Home</title>
-    <meta name="description" content="A Catalog of Shows Set in Los Angeles" />
+    <title>Iranian Kitchenette | Home</title>
+    <meta name="description" content="A Catalog of persian dish recipies to make at home" />
     <link rel="stylesheet" href="style.css" />
-    <script type="text/javascript" src="scripts.js"></script>
+    <script type="module" src="scripts.js"></script>
   </head>
 
   <body>
     <header class="main-header">
-      <h1 class="title">LA TV Shows</h1>
+      <h1 class="title">Iranian Kitchenette</h1>
     </header>
-    <div id="card-container"></div>
-    <div class="card" style="display: none">
-      <div class="card-content">
-        <h2>TV Show Title</h2>
-        <img src="" alt="TV Show Poster" />
-        <ul>
-          <li>Bullet Point 1</li>
-          <li>Bullet Point 2</li>
-          <li>Bullet Point 3</li>
-        </ul>
-      </div>
+
+    <div class="controls-bar">
+      <label for="party-size">Enter Your Party Size:</label>
+      <input id="party-size" class="party-size-input" type="number" value="2" min="2" max="20" />
+      
+      <button id="teehee-button">I don't like Persian food :/</button>
+      <button id="favorites-button">Shant's Favorites!</button>
     </div>
-    <div class="footer">
-      <button onclick="quoteAlert();">Get A Quote!</button>
-      <button onclick="removeLastCard();">Remove A Card!</button>
+
+    <div id="card-container">
+      <!-- Template card -->
+      <div class="card" onclick="toggleDirections(this)" style="display:none;">
+        <h2></h2>
+        <div class="card-body">
+          <div class="card-content-images">
+            <img src="" alt="Dish">
+          </div>
+          <div class="card-content-text">
+            <ul class="dynamic-bullets"></ul>
+            <div class="directions-text hidden">
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
